Fix footer categories overlap on small screens and homepage buttons animation

--- a/src/styles/button.module.css
+++ b/src/styles/button.module.css
@@ -1,4 +1,5 @@
 .buttonStyle {
+    width: 225px;
     display: inline-block;
     padding: 1.5rem;
     margin-right: 1rem;
@@ -8,12 +9,15 @@
     white-space: nowrap;
     text-align: center;
     font-size: 1.5rem;
-    text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
     transition: transform 200ms ease-in;
+    box-shadow: 0 4px 6px rgba(50,50,93,.11), 0 1px 3px rgba(0,0,0,.08)
 }
 
 .buttonStyle:hover {
-    transform: scale(1.06);
+    transform: translateY(-1px);
+    /* box-shadow: inset 0 0 100px 100px rgba(255,255,255,0.3); */
+    box-shadow: 0 7px 14px rgba(50,50,93,.1), 0 3px 6px rgba(0,0,0,.08);
+
 }
 
 @media(max-width:460px){
